fix comment box overflow issue #1387

--- a/apps/forms-flow-ai/forms-flow-web/src/components/FOI/FOIRequest/MinistryReview/MinistryReviewTabbedContainer.scss
+++ b/apps/forms-flow-ai/forms-flow-web/src/components/FOI/FOIRequest/MinistryReview/MinistryReviewTabbedContainer.scss
@@ -293,11 +293,13 @@ span.circle
 @media only screen and (max-width:1920px){
   .foitabpanelcollection{
       min-width: 1000px;
+      max-width: 1000px;
   }
 }
 
 @media screen and (max-width: 6000px) and (min-width: 1920px), (min-width: 1920px) {
   .foitabpanelcollection{
+    max-width: 1150px;
     min-width: 1150px;
   }
 }
